--- a/Makefile.in
+++ b/Makefile.in
@@ -144,7 +144,7 @@ HEADER_DIRS :=                                                              \
         fmpz_mod_mpoly_factor           fmpq_mpoly_factor                   \
         fq_nmod_mpoly_factor            fq_zech_mpoly_factor                \
                                                                             \
-        fft             fft_small       fmpz_poly_q     fmpz_lll            \
+        fft             @FFT_SMALL@     fmpz_poly_q     fmpz_lll            \
         n_poly          arith           qsieve          aprcl               \
                                                                             \
         nf              nf_elem         qfb                                 \
