--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
-################################################################################ 
+################################################################################
 # preamble
-################################################################################ 
+################################################################################
 
 define(FLINT_COPYRIGHT,[[
 Copyright (C) 2023 Albin Ahlbäck
@@ -77,9 +77,9 @@ FLINT_PATCH_SO=0
 # Make sure that we are in the right directory
 AC_CONFIG_SRCDIR(src/fmpz/link/fmpz_reentrant.c)
 
-################################################################################ 
+################################################################################
 # initialize libtool
-################################################################################ 
+################################################################################
 
 # Later we want to overwrite the default CFLAGS. Check now whether they are set
 # or not as Libtool overwrites CFLAGS.
@@ -104,9 +104,9 @@ then
     CFLAGS=
 fi
 
-################################################################################ 
+################################################################################
 # build system
-################################################################################ 
+################################################################################
 
 if test -n "$target_alias";
 then
@@ -116,15 +116,15 @@ fi
 # Get system triplet
 AC_CANONICAL_HOST
 
-################################################################################ 
+################################################################################
 # configure headers
-################################################################################ 
+################################################################################
 
 AC_CONFIG_HEADERS(src/flint-config.h:src/config.h.in)
 
-################################################################################ 
+################################################################################
 # features
-################################################################################ 
+################################################################################
 
 AC_ARG_ENABLE(pthread,
 [AS_HELP_STRING([--enable-pthread],[Enable pthread [default=yes]])],
@@ -244,9 +244,9 @@ yes|no)
 esac],
 enable_avx512="no")
 
-################################################################################ 
+################################################################################
 # packages
-################################################################################ 
+################################################################################
 
 AC_ARG_WITH(gmp_include,
 [AS_HELP_STRING([--with-gmp-include=DIR],[GMP include directory])],
@@ -438,9 +438,9 @@ then
     with_ntl="yes"
 fi
 
-################################################################################ 
+################################################################################
 # programs
-################################################################################ 
+################################################################################
 
 AC_PROG_CC
 
@@ -451,9 +451,9 @@ fi
 
 AC_PROG_MKDIR_P
 
-################################################################################ 
+################################################################################
 # environment variables
-################################################################################ 
+################################################################################
 
 AC_ARG_VAR([TESTCFLAGS], [Choose different C compiler flags for tests [default=CFLAGS]. Can be useful to compile library at a specific optimization level while compiling tests fast.])
 
@@ -470,9 +470,9 @@ fi
 
 AC_DEFINE_UNQUOTED([FLINT_TMPDIR], ["$TMPDIR"], [Define to set the default directory for temporary files])
 
-################################################################################ 
+################################################################################
 # check programs and system
-################################################################################ 
+################################################################################
 
 AC_C_INLINE
 
@@ -578,16 +578,16 @@ then
 fi
 AC_SUBST(LDCONFIG)
 
-################################################################################ 
+################################################################################
 # check headers
-################################################################################ 
+################################################################################
 
 # Mandatory headers
 AC_CHECK_HEADERS([stdarg.h stdio.h stdlib.h stdint.h string.h math.h float.h errno.h gmp.h mpfr.h],,
                  AC_MSG_ERROR([Could not find a mandatory header!]))
 
 # Optional headers
-AC_CHECK_HEADERS([fenv.h alloca.h malloc.h sys/param.h unistd.h windows.h])
+AC_CHECK_HEADERS([fenv.h alloca.h malloc.h sys/param.h unistd.h windows.h arm_neon.h x86intrin.h immintrin.h])
 
 if test "$enable_pthread" = "yes";
 then
@@ -619,9 +619,9 @@ then
                     AC_MSG_ERROR([Could not find NTL/ZZ.h!]))
 fi
 
-################################################################################ 
+################################################################################
 # check libraries
-################################################################################ 
+################################################################################
 
 AC_CHECK_LIB(m,fabs,
 [LIBS="-lm $LIBS"],
@@ -697,9 +697,9 @@ that we can either fix the issue or give a more proper error message.])])
     LIBS="$SAVE_libs"
 fi
 
-################################################################################ 
+################################################################################
 # check settings and environment
-################################################################################ 
+################################################################################
 
 AC_SUBST(PIC_FLAG,$pic_flag)
 
@@ -803,9 +803,9 @@ AC_COMPILE_IFELSE(
     [AC_MSG_RESULT([no])]
 )
 
-################################################################################ 
+################################################################################
 # CFLAGS
-################################################################################ 
+################################################################################
 
 save_CFLAGS="$CFLAGS"
 CFLAGS=""
@@ -883,9 +883,68 @@ fi
 
 CPPFLAGS="-I./src $CPPFLAGS"
 
-################################################################################ 
+################################################################################
+# fft_small module
+################################################################################
+
+enable_fft_small="no"
+
+AC_MSG_CHECKING([whether fft_small module is available])
+
+if test "$ac_cv_header_arm_neon_h" = "yes";
+then
+    AC_COMPILE_IFELSE(
+        [AC_LANG_PROGRAM([],[
+#ifndef __ARM_NEON
+#error Dead man
+error
+#endif
+         ])],
+        [AC_COMPILE_IFELSE(
+            [AC_LANG_PROGRAM([],[
+#ifndef __GNUC__
+#error Dead man
+error
+#endif
+             ])],
+            [enable_fft_small="yes"]
+        )]
+    )
+fi
+
+if test "$ac_cv_header_x86intrin_h" = "yes" && test "$ac_cv_header_immintrin_h" = "yes";
+then
+    AC_COMPILE_IFELSE(
+        [AC_LANG_PROGRAM([],[
+#ifndef __AVX2__
+#error Dead man
+error
+#endif
+         ])],
+        [AC_COMPILE_IFELSE(
+            [AC_LANG_PROGRAM([],[
+#ifndef __GNUC__
+#error Dead man
+error
+#endif
+             ])],
+            [enable_fft_small="yes"]
+        )]
+    )
+fi
+
+AC_MSG_RESULT([$enable_fft_small])
+
+if test "$enable_fft_small" = "yes";
+then
+    AC_SUBST(FFT_SMALL, [fft_small\ \ \ ])
+else
+    AC_SUBST(FFT_SMALL, [\ \ \ \ \ \ \ \ \ \ \ \ ])
+fi
+
+################################################################################
 # substitutions and definitions
-################################################################################ 
+################################################################################
 
 AC_SUBST(FLINT_MAJOR)
 AC_SUBST(FLINT_MINOR)
@@ -995,9 +1054,9 @@ then
     AC_DEFINE(FLINT_WANT_GMP_INTERNALS,1,[Define to enable use of GMP internals.])
 fi
 
-################################################################################ 
+################################################################################
 # epilog
-################################################################################ 
+################################################################################
 
 AC_CONFIG_FILES([Makefile flint.pc])
 AC_OUTPUT
