--- a/configure.ac
+++ b/configure.ac
@@ -665,8 +665,8 @@ fi
 
 if test "$with_blas" = "yes";
 then
-    AC_CHECK_LIB(blas,cblas_dgemm,
-    [LIBS="-lblas $LIBS"],
+    AC_CHECK_LIB(cblas,cblas_dgemm,
+    [LIBS="-lcblas $LIBS"],
     [AC_MSG_ERROR([BLAS library was not found.  If you indeed have BLAS installed, please
 submit a bug report to <https://github.com/flintlib/flint2/issues/> so
 that we can either fix the issue or give a more proper error message.])])
