--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,8 +27,8 @@ jobs:
           sudo apt install -y libmpfr-dev
           sudo apt install -y autoconf
           sudo apt install -y libtool-bin
-          sudo apt install -y gcovr
           gcc --version
+          gcov --version
           make --version
           autoconf --version
           libtool --version
