--- a/configure.ac
+++ b/configure.ac
@@ -704,9 +704,16 @@ if test "$with_blas" = "yes";
 then
     AC_CHECK_LIB(cblas,cblas_dgemm,
     [LIBS="-lcblas $LIBS"],
-    [AC_MSG_ERROR([BLAS library was not found.  If you indeed have BLAS installed, please
+    [AC_CHECK_LIB(openblas,cblas_dgemm,
+     [LIBS="-lopenblas $LIBS"],
+     [AC_CHECK_LIB(blas,cblas_dgemm,
+      [LIBS="-lblas $LIBS"],
+      [AC_MSG_ERROR([BLAS library was not found.  If you indeed have BLAS installed, please
 submit a bug report to <https://github.com/flintlib/flint2/issues/> so
-that we can either fix the issue or give a more proper error message.])])
+that we can either fix the issue or give a more proper error message.])]
+      )]
+     )]
+    )
 fi
 
 if test "$with_ntl" = "yes";
